[metadata]
name = article.synchronizer
author = xiaojueguan
author-email = xiaojueguan@google.com
summary = Useful article synchronizer from boostnote to markdown blog
description-file =
    README.rst
home-page = https://github.com/albertjone/article.synchronizer
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[extras]
# package dependencies for optional (non-rabbitmq) messaging drivers.
# projects can test-depend on oslo.messaging[<drivers>]
# e.g.: oslo.messaging[kafka,amqp1]
amqp1 =
    pyngus>=2.2.0 # Apache-2.0
kafka =
    confluent-kafka>=0.11.6 # Apache-2.0

[files]
packages =
    article_synchronizer

[entry_points]
console_scripts =

[bdist_wheel]
universal = 1

[compile_catalog]
directory = article_synchronizer/locale
domain = article_synchronizer

[update_catalog]
domain = article_synchronizer
output_dir = article_synchronizer/locale
input_file = article_synchronizer/locale/article_synchronizer.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = article_synchronizer/locale/article_synchronizer.pot